02-gateway-api/04-app/01-whoami.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoamiv1
  labels:
    name: whoamiv1
  namespace: default  
spec:
  replicas: 1
  selector:
    matchLabels:
      task: whoamiv1
  template:
    metadata:
      labels:
        task: whoamiv1
    spec:
      containers:
        - name: whoamiv1
          image: traefik/traefikee-webapp-demo:v2
          args:
            - -ascii
            - -name=foo
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /ping
              port: 80
            failureThreshold: 1
            initialDelaySeconds: 2
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            requests: 
              cpu: 10m
              memory: 128Mi
            limits: 
              cpu: 200m
              memory: 256Mi  
---
apiVersion: v1
kind: Service
metadata:
  name: whoamiv1
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    task: whoamiv1

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoamiv2
  labels:
    name: whoamiv2
  namespace: default  
spec:
  replicas: 1
  selector:
    matchLabels:
      task: whoamiv2
  template:
    metadata:
      labels:
        task: whoamiv2
    spec:
      containers:
        - name: whoamiv2
          image: traefik/traefikee-webapp-demo:v2
          args:
            - -ascii
            - -name=bar
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /ping
              port: 80
            failureThreshold: 1
            initialDelaySeconds: 2
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            requests: 
              cpu: 10m
              memory: 128Mi
            limits: 
              cpu: 200m
              memory: 256Mi  

---

apiVersion: v1
kind: Service
metadata:
  name: whoamiv2
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    task: whoamiv2
